force-app/main/default/objects/Configuration_Side_Pane__c/Configuration_Side_Pane__c.object-meta.xml
<CustomObject>
    <label>Configuration Side Pane</label>
    <nameField>
        <label>Configuration Side Pane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Side Panes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>