force-app/main/default/objects/Configuration_Side_Pane__c/fields/Blind_Id__c.field-meta.xml
<CustomField>
    <fullName>Blind_Id__c</fullName>
    <label>Blind Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>