force-app/main/default/objects/Configuration_Side_Pane__c/fields/Blinds_Color__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Color__c</fullName>
    <label>Blinds Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>