force-app/main/default/objects/Configuration_Side_Pane__c/fields/Blinds_Type__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Type__c</fullName>
    <label>Blinds Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>