force-app/main/default/objects/Configuration_Side_Pane__c/fields/Case_Profile_Color__c.field-meta.xml
<CustomField>
    <fullName>Case_Profile_Color__c</fullName>
    <label>Case Profile Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>