force-app/main/default/objects/Configuration_Side_Pane__c/fields/Configuration_Side__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Side__c</fullName>
    <label>Configuration Side</label>
    <referenceTo>Configuration_Side__c</referenceTo>
    <relationshipLabel>Configuration Side Panes</relationshipLabel>
    <relationshipName>Configuration_Side_Panes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>