force-app/main/default/objects/Configuration_Side_Pane__c/fields/Edge_Profile_Color__c.field-meta.xml
<CustomField>
    <fullName>Edge_Profile_Color__c</fullName>
    <label>Edge Profile Color</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>