force-app/main/default/objects/Configuration_Side_Pane__c/fields/Glass_Color__c.field-meta.xml
<CustomField>
    <fullName>Glass_Color__c</fullName>
    <description>Glass color as comes from Visual</description>
    <inlineHelpText>Glass color as comes from Visual</inlineHelpText>
    <label>Glass Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>