force-app/main/default/objects/Configuration_Side_Pane__c/fields/Glass_Number__c.field-meta.xml
<CustomField>
    <fullName>Glass_Number__c</fullName>
    <label>Glass Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>