force-app/main/default/objects/Configuration_Side_Pane__c/fields/Glass_Type__c.field-meta.xml
<CustomField>
    <fullName>Glass_Type__c</fullName>
    <label>Glass Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>