force-app/main/default/objects/Configuration_Side_Pane__c/fields/GlasswithHole__c.field-meta.xml
<CustomField>
    <fullName>GlasswithHole__c</fullName>
    <description>Upholstery GlasswithHole for Railing</description>
    <label>GlasswithHole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>