force-app/main/default/objects/Configuration_Side_Pane__c/fields/Has_Blinds__c.field-meta.xml
<CustomField>
    <fullName>Has_Blinds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Blinds</label>
    <type>Checkbox</type>
</CustomField>