force-app/main/default/objects/Configuration_Side_Pane__c/fields/Has_Sand_Blasting__c.field-meta.xml
<CustomField>
    <fullName>Has_Sand_Blasting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Sand Blasting</label>
    <type>Checkbox</type>
</CustomField>