force-app/main/default/objects/Configuration_Side_Pane__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Upholstery Height for Railing</description>
    <label>Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>