force-app/main/default/objects/Configuration_Side_Pane__c/fields/Middle_Latch_Height_Left__c.field-meta.xml
<CustomField>
    <fullName>Middle_Latch_Height_Left__c</fullName>
    <label>MiddleLatchHeightLeft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>