force-app/main/default/objects/Configuration_Side_Pane__c/fields/Sandblasting__c.field-meta.xml
<CustomField>
    <fullName>Sandblasting__c</fullName>
    <description>Upholstery Sandblasting for Railing</description>
    <label>Sandblasting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>