force-app/main/default/objects/Configuration_Side_Pane__c/fields/Sandblasting_Height__c.field-meta.xml
<CustomField>
    <fullName>Sandblasting_Height__c</fullName>
    <description>Upholstery Sandblasting Height for Railing</description>
    <label>Sandblasting Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>