force-app/main/default/objects/Configuration_Side_Pane__c/fields/SilkPrint__c.field-meta.xml
<CustomField>
    <fullName>SilkPrint__c</fullName>
    <description>Upholstery SilkPrint for Railing</description>
    <label>SilkPrint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>