force-app/main/default/objects/Configuration_Side_Pane__c/fields/Upholstery_Material__c.field-meta.xml
<CustomField>
    <fullName>Upholstery_Material__c</fullName>
    <description>Upholstery Material for Railing</description>
    <label>Upholstery Material</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>